--- a/index.html
+++ b/index.html
@@ -1,22 +1,42 @@
-.king-glow { 
-    font-weight: bold; 
-    text-shadow: 0 0 15px #bc13fe, 0 0 25px #00f2fe; 
-    background: linear-gradient(to right, #bc13fe, #00f2fe, #ff00ff, #bc13fe);
-    background-size: 200% auto;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    animation: shine 3s linear infinite;
-}
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <title>مملكة علوش | النسخة الملكية الكاملة</title>
+    <style>
+        :root { --king: #bc13fe; --accent: #00f2fe; }
+        * { box-sizing: border-box; margin: 0; padding: 0; }
+        body { background: #000; color: white; font-family: 'Tahoma', sans-serif; height: 100vh; overflow: hidden; }
 
-@keyframes shine {
-    to { background-position: 200% center; }
-}
+        /* الهيدر العلوي */
+        header { height: 60px; background: #111; border-bottom: 2px solid var(--king); display: flex; align-items: center; padding: 0 20px; justify-content: space-between; box-shadow: 0 0 20px rgba(188, 19, 254, 0.3); }
+        
+        .main-grid { display: grid; grid-template-columns: 280px 1fr 220px; height: calc(100vh - 60px); }
 
-.crown-anim {
-    display: inline-block;
-    animation: bounce 1s infinite alternate;
-}
-@keyframes bounce {
-    from { transform: translateY(0); }
-    to { transform: translateY(-5px); }
-}
+        /* قسم اليوتيوب (اليسار) */
+        .yt-side { background: #0a0a0a; border-left: 1px solid #333; padding: 15px; overflow-y: auto; }
+        .yt-input { width: 100%; background: #000; border: 1px solid #444; color: white; padding: 10px; border-radius: 5px; margin-bottom: 5px; outline: none; }
+        .yt-btn { width: 100%; background: #ff0000; color: white; border: none; padding: 10px; cursor: pointer; border-radius: 5px; font-weight: bold; transition: 0.3s; }
+        .yt-btn:hover { background: #cc0000; box-shadow: 0 0 10px red; }
+        .yt-card { background: #1a1a1a; margin-top: 15px; padding: 8px; border: 1px solid #333; cursor: pointer; border-radius: 5px; transition: 0.3s; }
+        .yt-card:hover { border-color: var(--king); background: #222; }
+
+        /* الشات (الوسط) */
+        .chat-area { display: flex; flex-direction: column; background: #050505; border-left: 1px solid #333; border-right: 1px solid #333; position: relative; }
+        #msg-box { flex: 1; padding: 20px; overflow-y: auto; background: url('https://www.transparenttextures.com/patterns/dark-matter.png'); }
+        #player-zone { position: absolute; top: 0; left: 0; width: 100%; z-index: 100; background: #000; border-bottom: 2px solid var(--king); display: none; }
+
+        /* الكتابة (الأسفل) */
+        .footer { padding: 15px; background: #111; display: flex; gap: 10px; border-top: 1px solid #333; }
+        .chat-input { flex: 1; background: #000; border: 1px solid #444; color: white; padding: 12px; border-radius: 5px; outline: none; }
+        .send-btn { background: var(--king); color: white; border: none; padding: 0 25px; cursor: pointer; border-radius: 5px; font-weight: bold; transition: 0.3s; }
+        .send-btn:hover { background: #9b10d1; box-shadow: 0 0 15px var(--king); }
+
+        /* تأثيرات الهيبة الملكية */
+        .king-glow { 
+            font-weight: bold; 
+            text-shadow: 0 0 15px #bc13fe, 0 0 25px #00f2fe; 
+            background: linear-gradient(to right, #bc13fe, #00f2fe, #ff00ff, #bc13fe);
+            background-size: 200% auto;
+            -webkit-background-clip: text;
+            -
